feat(commands): Make /staffhistory mirror /modlog functionality
- Add pagination with clickable navigation matching /modlog style
- Add --gui/-g flag to redirect to modlog GUI with -staff flag
- Add support for ipbans, ipmutes, and ip type filters
- Add clickable case ID entries with hover details
- Format entries showing target player with arrow notation
- Add flexible argument parsing for type and page